# KappaIOU

./: .gitignore  LICENSE  README.md  Section4.py  pyproject.toml
kappaiou/: __init__.py  cli.py  core.py
tests/: test.py
